checkpatch-results/home/fedora/lkml-analysis/lkml/1/0000215992.e10aeb39c1d3567f1906ca36162c977c1b7c0672
CHECK:INVALID_UTF8: Invalid UTF-8, patch and commit message should be encoded in UTF-8
#34: 
arch/x86/kernel/es7000_32.c: In function ‘find_unisys_acpi_oem_table’:
                                         ^

CHECK:INVALID_UTF8: Invalid UTF-8, patch and commit message should be encoded in UTF-8
#35: 
arch/x86/kernel/es7000_32.c:255: error: implicit declaration of function ‘acpi_get_table_with_size’
                                                                         ^

CHECK:INVALID_UTF8: Invalid UTF-8, patch and commit message should be encoded in UTF-8
#36: 
arch/x86/kernel/es7000_32.c:261: error: implicit declaration of function ‘early_acpi_os_unmap_memory’
                                                                         ^

CHECK:INVALID_UTF8: Invalid UTF-8, patch and commit message should be encoded in UTF-8
#37: 
arch/x86/kernel/es7000_32.c: In function ‘unmap_unisys_acpi_oem_table’:
                                         ^

CHECK:INVALID_UTF8: Invalid UTF-8, patch and commit message should be encoded in UTF-8
#38: 
arch/x86/kernel/es7000_32.c:277: error: implicit declaration of function ‘__acpi_unmap_table’
                                                                         ^

WARNING:UNKNOWN_COMMIT_ID: Unknown commit id 'a73aaedd95703bd49f4c3f9df06fb7b7373ba905', maybe rebased or not pulled?
#42: 
| commit a73aaedd95703bd49f4c3f9df06fb7b7373ba905

WARNING:COMMIT_LOG_LONG_LINE: Possible unwrapped commit description (prefer a maximum 75 chars per line)
#53: 
	acpi: remove final __acpi_map_table mapping before setting acpi_gbl_permanent_mmap

./tmp.JOzjvdpBcb//home/fedora/lkml-analysis/lkml/1/patch.offset.0000215992.commit.e10aeb39c1d3567f1906ca36162c977c1b7c0672 total: 0 errors, 2 warnings, 5 checks, 32 lines checked

NOTE: For some of the reported defects, checkpatch may be able to
      mechanically convert to the typical style using --fix or --fix-inplace.

./tmp.JOzjvdpBcb//home/fedora/lkml-analysis/lkml/1/patch.offset.0000215992.commit.e10aeb39c1d3567f1906ca36162c977c1b7c0672 has style problems, please review.

NOTE: If any of the errors are false positives, please report
      them to the maintainer, see CHECKPATCH in MAINTAINERS.
